// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRating renderiza correctamente en modo editable con valor 4 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
  testID="star-rating"
>
  <View
    accessibilityLabel="1 estrella"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="star-1"
  >
    <Text
      style={
        [
          {
            "fontSize": 24,
            "marginHorizontal": 2,
          },
          {
            "color": "#F5A623",
          },
        ]
      }
    >
      ★
    </Text>
  </View>
  <View
    accessibilityLabel="2 estrellas"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="star-2"
  >
    <Text
      style={
        [
          {
            "fontSize": 24,
            "marginHorizontal": 2,
          },
          {
            "color": "#F5A623",
          },
        ]
      }
    >
      ★
    </Text>
  </View>
  <View
    accessibilityLabel="3 estrellas"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="star-3"
  >
    <Text
      style={
        [
          {
            "fontSize": 24,
            "marginHorizontal": 2,
          },
          {
            "color": "#F5A623",
          },
        ]
      }
    >
      ★
    </Text>
  </View>
  <View
    accessibilityLabel="4 estrellas"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="star-4"
  >
    <Text
      style={
        [
          {
            "fontSize": 24,
            "marginHorizontal": 2,
          },
          {
            "color": "#F5A623",
          },
        ]
      }
    >
      ★
    </Text>
  </View>
  <View
    accessibilityLabel="5 estrellas"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="star-5"
  >
    <Text
      style={
        [
          {
            "fontSize": 24,
            "marginHorizontal": 2,
          },
          {
            "color": "#C0C0C0",
          },
        ]
      }
    >
      ☆
    </Text>
  </View>
</View>
`;

exports[`StarRating renderiza correctamente en modo readonly con valor 3 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
  testID="star-rating"
>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "marginHorizontal": 2,
        },
        {
          "color": "#F5A623",
        },
      ]
    }
    testID="star-1"
  >
    ★
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "marginHorizontal": 2,
        },
        {
          "color": "#F5A623",
        },
      ]
    }
    testID="star-2"
  >
    ★
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "marginHorizontal": 2,
        },
        {
          "color": "#F5A623",
        },
      ]
    }
    testID="star-3"
  >
    ★
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "marginHorizontal": 2,
        },
        {
          "color": "#C0C0C0",
        },
      ]
    }
    testID="star-4"
  >
    ☆
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "marginHorizontal": 2,
        },
        {
          "color": "#C0C0C0",
        },
      ]
    }
    testID="star-5"
  >
    ☆
  </Text>
</View>
`;
